packages/parser/test/tokenizer/E0002-char-not-terminated.txt
'a
===== err =====
/test/tokenizer/E0002-char-not-terminated.txt:1:1: SyntaxError: E0002 - Unterminated character literal
1 | 'a
  | ^
